Fix strikethrough on reminders

--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -67,41 +67,42 @@ div.notifications {
   row-gap: 5px;
 }
 
-<<<<<<< HEAD
 /* Strikethrough for Checkbox */
 
 .strikethrough {
 	display: inline-block !important;
 	position: relative !important;
 	transition: all 0.5s cubic-bezier(.55, 0, .1, 1) !important;
+  text-decoration: line-through;
 }
 
-.strikethrough:after {
-	content: '' !important;
-	position: absolute !important;
+/* /* .strikethrough:after { 
+	/* content: '' !important; */
+	/* position: absolute !important;
 	display: block !important;
 	width: 100% !important;
 	height: 2px !important;
   /* left: 1 !important; */
-	box-shadow: 0 1px rgba(255,255,255,0.6) !important;
+	/* box-shadow: 0 1px rgba(255,255,255,0.6) !important;
 	margin-top: 0.5em !important;
-	background: black;
-	transform-origin: center left !important;
-	animation: strikethrough 1s 0.5s cubic-bezier(.55, 0, .1, 1) 1 !important;
+  margin-left: 2em !important;
+	background: black; */
+	/* transform-origin: center left !important;
+	animation: strikethrough 1s 0.5s cubic-bezier(.55, 0, .1, 1) 1 !important; */ 
 	/* transition: transform 0.5s cubic-bezier(.55, 0, .1, 1) !important; */
-}
+/* } */ 
 
 /* hover effect */
 
-.strikethrough:hover {
-	color: rgb(12, 59, 37) !important;
-	background: rgba(255, 189, 182, 0.3) !important;
-}
+/* .strikethrough:hover { */
+	/* color: rgb(12, 59, 37) !important; */
+	/* background: rgba(179, 201, 248, 0.3) !important; */
+/* } */
 
-.strikethrough:hover:after {
+/* .strikethrough:hover:after {
 	transform: scaleX(0) !important;
 	transform-origin: center right !important;
-}
+} */
 
 /* Keyframes for initial animation */
 
@@ -112,10 +113,10 @@ div.notifications {
 	to {
 		transform: scaleX(3) !important;
 	}
-=======
+}
+
 h3.ui.header.dash-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
->>>>>>> master
-}
+} 
