Add user feedback when reminder is clicked

--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -67,6 +67,9 @@ div.notifications {
   row-gap: 5px;
 }
 
+.reminder-watered{
+  margin-left: 1em !important;
+}
 .top-label {
   font-size: 17px !important;
   padding-top: 0.7em !important;
