download and save plant photos to db, fix links on newsfeed

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -153,3 +153,20 @@ div.plant-name {
   flex-direction: column;
   justify-content: center;
 }
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.fadeOut {
+  animation-name: fadeOut;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-delay: 2s
+}
