--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -76,36 +76,6 @@ div.notifications {
   text-decoration: line-through;
 }
 
-/* /* .strikethrough:after { 
-	/* content: '' !important; */
-	/* position: absolute !important;
-	display: block !important;
-	width: 100% !important;
-	height: 2px !important;
-  /* left: 1 !important; */
-	/* box-shadow: 0 1px rgba(255,255,255,0.6) !important;
-	margin-top: 0.5em !important;
-  margin-left: 2em !important;
-	background: black; */
-	/* transform-origin: center left !important;
-	animation: strikethrough 1s 0.5s cubic-bezier(.55, 0, .1, 1) 1 !important; */ 
-	/* transition: transform 0.5s cubic-bezier(.55, 0, .1, 1) !important; */
-/* } */ 
-
-/* hover effect */
-
-/* .strikethrough:hover { */
-	/* color: rgb(12, 59, 37) !important; */
-	/* background: rgba(179, 201, 248, 0.3) !important; */
-/* } */
-
-/* .strikethrough:hover:after {
-	transform: scaleX(0) !important;
-	transform-origin: center right !important;
-} */
-
-/* Keyframes for initial animation */
-
 @keyframes strikethrough {
 	from {
 		transform: scaleX(0) !important;
@@ -121,11 +91,9 @@ h3.ui.header.dash-header {
   justify-content: space-between;
 } 
 
-
 div.plant-card {
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
   column-gap: 10px;
 }
 
@@ -133,6 +101,7 @@ div.plant-progress {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: auto;
   row-gap: 5px;
   width: 100%;
 }
