--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -151,7 +151,14 @@ div.plant-header {
 div.plant-name {
   display: flex;
   flex-direction: column;
-  /* justify-content: flex-start; */
+  max-width: 100%;
+  min-width: 100px;
+  row-gap: 25px;
+}
+
+div.topic-ribbon {
+  display: flex;
+  flex-direction: column;
   max-width: 100%;
   min-width: 100px;
   row-gap: 25px;
@@ -171,7 +178,7 @@ div.plant-name {
   animation-name: fadeOut;
   animation-duration: 1s;
   animation-fill-mode: both;
-  animation-delay: 3s
+  animation-delay: 3s;
 }
 
 div.ui.card.picture {
@@ -191,4 +198,11 @@ div.ui.card.picture {
 .ui.ribbon.label {
   font-size: 15px;
   width: 50%;
+}
+
+div.news-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 10px;
 }
