--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -23,8 +23,10 @@
   max-height: 275px;
   width: 100%;
   height: 275px;
-  background: #9dbf98;
-  opacity: 0.95;
+  background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm222batch5-kul-36_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=4ce6584b26089e990be89650d5d1cad8");
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 3px 5px 8px grey;
 }
 
 .Board.dining {
@@ -32,8 +34,10 @@
   max-height: 275px;
   width: 100%;
   height: 275px;
-  background: #9dbf98;
-  opacity: 0.95;
+  background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm222batch5-kul-36_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=4ce6584b26089e990be89650d5d1cad8");
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 3px 5px 8px grey;
 }
 
 .Board.bedroom {
@@ -41,8 +45,10 @@
   max-height: 275px;
   width: 100%;
   height: 275px;
-  background: #9dbf98;
-  opacity: 0.95;
+  background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm222batch5-kul-36_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=4ce6584b26089e990be89650d5d1cad8");
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 3px 5px 8px grey;
 }
 
 .Board.office {
@@ -50,8 +56,18 @@
   max-height: 275px;
   width: 100%;
   height: 275px;
-  background: #9dbf98;
-  opacity: 0.95;
+  background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm222batch5-kul-36_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=4ce6584b26089e990be89650d5d1cad8");
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 3px 5px 8px grey;
+}
+
+#room {
+  background-color: #9dbf98;
+}
+
+#room-plant {
+  box-shadow: 3px 3px 5px grey;
 }
 
 div.header.room-header {
@@ -137,6 +153,6 @@ div.plant-nickname {
   justify-content: center;
 }
 
-.ui.progress .bar>.progress {
+.ui.progress .bar > .progress {
   right: 0.1em;
 }
