--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -18,15 +18,26 @@
   padding-bottom: 280px;
 }
 
-.Board.living, .Board.bedroom, 
-.Board.dining, .Board.office {
+.Board.living,
+.Board.bedroom,
+.Board.dining {
   overflow: auto;
   max-height: 275px;
   width: 100%;
   height: 275px;
   background: #9dbf98;
   opacity: 0.95;
-  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  background-image: url("https://www.transparenttextures.com/patterns/brick-wall-dark.png");
+}
+
+.Board.office {
+  overflow: auto;
+  max-height: 275px;
+  width: 100%;
+  height: 275px;
+  background: #9dbf98;
+  opacity: 0.95;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
 }
 
 div.header.room-header {
@@ -112,7 +123,7 @@ div.plant-nickname {
   justify-content: center;
 }
 
-.ui.progress .bar>.progress {
+.ui.progress .bar > .progress {
   right: 0.1em;
   color: black;
 }
