--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
   margin-top: 120px;
+  background-image: url("https://media.istockphoto.com/photos/closeup-nature-view-of-green-leaf-background-picture-id1208290498?b=1&k=20&m=1208290498&s=170667a&w=0&h=gBgk3i33pieBVDmVlnft31qL0D0rrcD_g1JZaAepg7k=");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .App-logo {
@@ -38,6 +41,7 @@ main.container {
   flex-direction: row;
   justify-content: space-evenly;
   margin: auto;
+  background-color: red;
 }
 
 div.plants {
@@ -171,7 +175,7 @@ div.plant-name {
   animation-name: fadeOut;
   animation-duration: 1s;
   animation-fill-mode: both;
-  animation-delay: 3s
+  animation-delay: 3s;
 }
 
 div.ui.card.picture {
