Adjust nav bar colors and buttons

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -142,7 +142,7 @@ div.ui.video {
 }
 
 div.ui.inverted.segment.navbar-segment {
-  background-color: #9dbf98;
+  background-color: #395b3d;
 }
 
 div.plant-header {
