--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -18,6 +18,17 @@
   padding-bottom: 280px;
 }
 
+.app.container {
+  background-image: url("https://media.istockphoto.com/photos/closeup-nature-view-of-green-leaf-background-picture-id1208290498?b=1&k=20&m=1208290498&s=170667a&w=0&h=gBgk3i33pieBVDmVlnft31qL0D0rrcD_g1JZaAepg7k=");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+/* dashboard wgood morning */
+.ui.raised.segment {
+  background-color: cornsilk;
+}
+
 .Board.living {
   overflow: auto;
   max-height: 275px;
