update style (nav bar, containers), fix typos in posts

--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -72,13 +72,14 @@
 }
 
 #room {
-  background-color: #9dbf98;
+  background-color: #436648;
 }
 
 #room-plant {
   box-shadow: 3px 3px 5px grey;
-  background: #9dbf98;
-  opacity: 0.95;
+  /* background: #9dbf98; */
+  background: white;
+  /* opacity: 0.95; */
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
 }
 
