--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
-  margin-top: 120px;
   background-image: url("https://media.istockphoto.com/photos/closeup-nature-view-of-green-leaf-background-picture-id1208290498?b=1&k=20&m=1208290498&s=170667a&w=0&h=gBgk3i33pieBVDmVlnft31qL0D0rrcD_g1JZaAepg7k=");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: contain;
 }
 
@@ -130,9 +129,15 @@ div.ui.two.cards {
   margin: auto;
 }
 
+div.ui.container.profile, 
+div.ui.container.newsfeed, 
+div.ui.container.wishlist, 
 div.ui.container.app-container {
-  width: 97%;
-  margin: auto;
+  width: 100%;
+  height: 100%;
+  margin-top: 78px;
+  padding-top: 40px;
+  padding-left: 20px;
 }
 
 div.ui.video {
