--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -27,12 +27,13 @@ code {
 .home {
   position: fixed;
   top: 0;
+  margin-top: 75px;
   background-position: center;
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
   background-size: cover;
-  background-image: url("https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-image: url("https://images.unsplash.com/photo-1613858749327-c09380ae8116?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
   color: white;
 }
 
@@ -50,8 +51,8 @@ code {
 
 #bee {
   position: fixed;
-  top: 10%;
-  left: 20%;
+  top: 25%;
+  right: 7%;
 }
 
 #bee:hover {
