--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -129,9 +129,9 @@ div.ui.two.cards {
   margin: auto;
 }
 
-div.ui.container.profile, 
-div.ui.container.newsfeed, 
-div.ui.container.wishlist, 
+div.ui.container.profile,
+div.ui.container.newsfeed,
+div.ui.container.wishlist,
 div.ui.container.app-container {
   width: 100%;
   height: 100%;
@@ -225,4 +225,11 @@ div.wishlist-header {
 
 div.header-wishlist-plant {
   font-size: 16px;
+}
+
+div.ui.segment.profile {
+  color: white;
+  text-shadow: 2px 2px 2px #325036;
+  background-color: rgba(225, 205, 48, 0.50);
+  background-image: url(https://www.transparenttextures.com/patterns/asfalt-light.png);
 }
