--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -138,6 +138,16 @@ div.ui.container.app-container {
   margin-top: 78px;
   padding-top: 40px;
   padding-left: 20px;
+  /* padding-bottom: 120px; */
+}
+
+div.ui.container.plant-page {
+  width: 100%;
+  height: 100%;
+  margin-top: 78px;
+  padding-top: 40px;
+  padding-left: 20px;
+  padding-bottom: 120px;
 }
 
 div.ui.video {
