--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -1,3 +1,9 @@
+.font-link {
+font-family: 'Lobster', cursive;
+font-family: 'Patua One', cursive;
+font-family: 'Paytone One', sans-serif;
+}
+
 .drop {
   max-height: 105px !important;
 }
