change position of AddPlant form on Dashboard

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("https://media.istockphoto.com/photos/closeup-nature-view-of-green-leaf-background-picture-id1208290498?b=1&k=20&m=1208290498&s=170667a&w=0&h=gBgk3i33pieBVDmVlnft31qL0D0rrcD_g1JZaAepg7k=");
+  background-image: url("https://images.unsplash.com/photo-1490932056085-0fd20a6cc206?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MTJ8MTEwMjgyOXx8ZW58MHx8fHw%3D&w=1000&q=80");
   background-repeat: repeat;
   background-size: contain;
 }
