--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -276,7 +276,7 @@ div.ui.header.reminders-title {
  font-size: 45px;
 }
 
-.plant-name {
+.species-name {
   color: white !important;
   text-shadow: 2px 2px 2px black !important;
   font-family: Lobster !important;
