--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
-  background-repeat: repeat;
+  background-image: url("./assets/image_1.jpeg");
   background-size: contain;
 }
 
+/* Where we user this?? */
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
