--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -86,3 +86,12 @@ font-size: 30px;
   font-family: Paytone One !important;
   font-size: 32px;
 }
+
+.date-bulb {
+  padding-top: 1em !important;
+}
+
+description-bulby{
+  margin-top: 15px !important;
+  font-weight: bold !important;
+}
