--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -1,16 +1,21 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+#style-2 {
+  font-family: Paytone One !important;
+  font-weight: lighter;
+  font-size: 50px !important;
+}
 .navbar-segment {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
@@ -33,7 +38,7 @@ code {
   width: 100vw;
   height: 100vh;
   background-size: cover;
-  background-image: url("https://images.unsplash.com/photo-1613858749327-c09380ae8116?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-image: url('https://images.unsplash.com/photo-1613858749327-c09380ae8116?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');
   color: white;
 }
 
@@ -74,10 +79,10 @@ code {
 }
 
 .avatar-header {
-color: white; 
-text-shadow: 2px 2px 2px #325036;
-font-family: Paytone One !important;
-font-size: 30px;
+  color: white;
+  text-shadow: 2px 2px 2px #325036;
+  font-family: Paytone One !important;
+  font-size: 30px;
 }
 
 .wishlist-title {
@@ -91,7 +96,7 @@ font-size: 30px;
   padding-top: 1em !important;
 }
 
-description-bulby{
+description-bulby {
   margin-top: 15px !important;
   font-weight: bold !important;
 }
