update scroll in AddPlant in Dashboard

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -4,6 +4,7 @@
   /* background-image: url("https://soowood.co.jp/wp/wp-content/uploads/2019/12/AdobeStock_300572424-1024x683.jpeg");
   background-repeat: repeat-x;*/
   background-size: contain;
+  background-color: black;
 }
 
 /* Where we user this?? */
