--- a/react-front-end/src/Coffee.css
+++ b/react-front-end/src/Coffee.css
@@ -1,5 +1,6 @@
 body {
-  background: #8acdeb;
+  background-color: #3d6b1d;
+  background-image: linear-gradient(280deg, #678a40 0%, #00210b 40%);
 }
 #container {
   position: absolute;
