--- a/react-front-end/src/sass/partials/_variables.scss
+++ b/react-front-end/src/sass/partials/_variables.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
 $font-family: "Source Sans Pro", sans-serif;
 
 $active-opacity: 1;
