adds top nav html

--- a/react-front-end/src/css/login.css
+++ b/react-front-end/src/css/login.css
@@ -9,7 +9,7 @@
 }
 
 .banner {
-  background-color: #eee;
+  background-color: rgb(181, 175, 175);
 }
 
 .image {
@@ -18,7 +18,7 @@
 
 @media (min-width: 768px) {
   .gradient-form {
-    height: 100vh !important;
+    height: 100% !important;
   }
 }
 @media (min-width: 769px) {
