--- a/react-front-end/src/sass/partials/_variables.scss
+++ b/react-front-end/src/sass/partials/_variables.scss
@@ -13,4 +13,10 @@ $OrangePeel: #FFA10A;
 $OrangePantone: #FF600A;
 $Cerise: #F50062;
 
+//login primary colors
+// #ee7724; 
+// #d8363a;
+// #dd3675;
+// #b44593;
+
 $dark-background: #300151;
