--- a/react-front-end/src/css/botNav.css
+++ b/react-front-end/src/css/botNav.css
@@ -1,1 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
+.bot-nav {
+  background-color: #ffa10a;
+  text-align: center;
+}
+.bot-nav .bot-nav-text-container {
+  display: flexbox;
+  flex-direction: row;
+  justify-content: space-around;
+}
