signup page add

--- a/react-front-end/src/sass/signup.scss
+++ b/react-front-end/src/sass/signup.scss
@@ -1,2 +1,48 @@
 @import './partials/mixins';
 @import './partials/variables';
+@import '~mdb-ui-kit/css/mdb.min.css';
+
+.gradient-custom-3 {
+	/* fallback for old browsers */
+	background: #84fab0;
+
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: -webkit-linear-gradient(
+		to right,
+		rgba(132, 250, 176, 0.5),
+		rgba(143, 211, 244, 0.5)
+	);
+
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: linear-gradient(
+		to right,
+		rgba(132, 250, 176, 0.5),
+		rgba(143, 211, 244, 0.5)
+	);
+}
+.gradient-custom-4 {
+	/* fallback for old browsers */
+	background: #84fab0;
+
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: -webkit-linear-gradient(
+		to right,
+		rgba(132, 250, 176, 1),
+		rgba(143, 211, 244, 1)
+	);
+
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: linear-gradient(
+		to right,
+		rgba(132, 250, 176, 1),
+		rgba(143, 211, 244, 1)
+	);
+}
+
+.card-border {
+	border-radius: 15px;
+}
+
+.bg-image {
+	background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');
+}
