--- a/react-front-end/src/css/savings.css
+++ b/react-front-end/src/css/savings.css
@@ -1,1 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
+.goal-container {
+  display: flexbox;
+  flex-direction: row;
+  height: 100vh;
+}
