--- a/react-front-end/src/sass/profile.scss
+++ b/react-front-end/src/sass/profile.scss
@@ -1,5 +1,5 @@
-@import './mixins';
-@import './variables';
+@import './partials/mixins';
+@import './partials/variables';
 
 @import '~mdb-ui-kit/css/mdb.min.css';
 
