Created skeleton components

--- a/react-client/src/App.scss
+++ b/react-client/src/App.scss
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  min-height: '100vh';
+  background-color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .App-logo {
