--- a/client/src/components/Venue.scss
+++ b/client/src/components/Venue.scss
@@ -1,12 +1,17 @@
+$white: #ffffff;
+
 .venue {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: black solid 2px;
-  width: 20vw;
-  height: 50vh;
-  border-radius: 4px;
-  padding-top: 5px;
+  border: black solid 3px;
+  width: 400px;
+  height: 400px;
+  border-radius: 50px;
+  padding-top: 9px;
+  background-color: $white;
+  background-image: url("https://www.transparenttextures.com/patterns/paper.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 
   &--img {
     display: flex;
@@ -16,6 +21,14 @@
     width: 95%;
     height: 60%;
     border-radius: 4px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    background-color: $white;
+  }
+
+  &--name {
+    font-style: italic;
+    font-weight: bold;
   }
 }
 
@@ -37,14 +50,19 @@
     border: black solid 2px;
     height: 20%;
     width: 95%;
+    background-color: $white;
   }
 
   &--description {
     display: flex;
     border: black solid 2px;
     border-radius: 4px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
     margin-top: 5px;
     height: 100%;
     width: 95%;
+    margin-bottom: 6px;
+    background-color: $white;
   }
 }
