styles gif/img to sit behind other divs and become opaque

--- a/react-front-end/src/css/savings.css
+++ b/react-front-end/src/css/savings.css
@@ -4,3 +4,14 @@
   flex-direction: row;
   height: 100vh;
 }
+
+#piggy-animation {
+  position: absolute;
+  opacity: 0.5;
+  top: 200px;
+  right: 150px;
+  z-index: 0;
+  transform: scale(2);
+  border-radius: 100%;
+  width: 26%;
+}
