--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -7,3 +7,13 @@
 
 }
 
+#piggy-animation {
+  position: absolute;
+  opacity: 0.5;
+  top: 200px;
+  right: 150px;
+  z-index: 0;
+  transform: scale(2);
+  border-radius: 100%;
+  width: 26%;
+}
