adds hover effects to all bottom nav buttons

--- a/react-front-end/src/css/expenses.css
+++ b/react-front-end/src/css/expenses.css
@@ -2,7 +2,12 @@
 @import '~mdb-ui-kit/css/mdb.min.css';
 #expense-table {
   max-height: 300px;
-  max-width: 1500px;
   overflow-y: scroll;
   scroll-behavior: smooth;
+}
+
+.textalign {
+  text-align: center;
+  width: 100%;
+  font-weight: bolder;
 }
