adds border color to gif in savings page

--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -16,6 +16,8 @@
   transform: scale(2);
   border-radius: 100%;
   width: 26%;
+  border: solid;
+  border-color: rgb(238,177,39);
 }
 
 #progress-circle {
