--- a/react-front-end/src/css/app.css
+++ b/react-front-end/src/css/app.css
@@ -1,1 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
+body {
+  height: 100%;
+  width: 100%;
+  max-height: 100vh;
+  max-width: 100vw;
+}
