--- a/react-front-end/src/css/profile.css
+++ b/react-front-end/src/css/profile.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
 @import '~mdb-ui-kit/css/mdb.min.css';
-.vh-100 {
-  background-color: #eee;
+.vw-100 {
+  background-color: rgba(249, 216, 175, 0.543);
 }
 
 .card {
