--- a/react-front-end/src/sass/app.scss
+++ b/react-front-end/src/sass/app.scss
@@ -1,2 +1,9 @@
 @import './partials/mixins';
 @import './partials/variables';
+
+body {
+  height: 100%;
+  width: 100%;
+  max-height: 100vh;
+  max-width: 100vw;
+}
