--- a/react-front-end/src/sass/profile.scss
+++ b/react-front-end/src/sass/profile.scss
@@ -3,8 +3,8 @@
 
 @import '~mdb-ui-kit/css/mdb.min.css';
 
-.vh-100 {
-  background-color: #eee;
+.vw-100 {
+  background-color: rgba(249, 216, 175, 0.543);
 }
 
 .card {
@@ -27,5 +27,7 @@
   width: 45%;
   max-width: 45%;
 }
+
+
 
 
