--- a/react-front-end/src/sass/app.scss
+++ b/react-front-end/src/sass/app.scss
@@ -2,8 +2,5 @@
 @import './partials/variables';
 
 body {
-  height: 100%;
-  width: 100%;
-  max-height: 100vh;
-  max-width: 100vw;
+  overflow-y: hidden;
 }
