--- a/react-front-end/src/css/login.css
+++ b/react-front-end/src/css/login.css
@@ -8,6 +8,12 @@
   background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .banner {
   background-color: rgb(181, 175, 175);
 }
