--- a/react-front-end/src/sass/login.scss
+++ b/react-front-end/src/sass/login.scss
@@ -7,10 +7,17 @@ background: #fccb90;
 /* Chrome 10-25, Safari 5.1-6 */
 background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
 
+
+
 /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .banner {
   background-color: rgb(181, 175, 175);
 }
