text align on profile page

--- a/react-front-end/src/sass/profile.scss
+++ b/react-front-end/src/sass/profile.scss
@@ -28,6 +28,17 @@
   max-width: 45%;
 }          
                         
+.total-saved-amount {
+  font-weight: bold;
+  color: green;
+}
 
+.job-name {
+  color:#757575;
+  font-weight:bold;
+}
 
-
+.total-saved-text {
+  color:#757575;
+  font-weight:bold;
+}
