--- a/react-front-end/src/sass/expenses.scss
+++ b/react-front-end/src/sass/expenses.scss
@@ -6,11 +6,14 @@
 #expenses-page {
 
   height: 100vh;
+  background-color:rgb(242, 235, 235);
   
   #expense-table {
-    max-height: 300px;
+    max-height: 900px;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    border-radius: 10%;
+
   }
   
   .textalign {
